--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+bin/
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -5,5 +6,6 @@ pom.xml.versionsBackup
 pom.xml.next
 release.properties
 *.classpath
-.project.project
+*.project
 *.prefs
+.settings/
