--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
 		<module>occi-text</module>
 		<module>occi-infrastructure</module>
 		<module>xmpp-core</module>
+		<module>intercloud-root</module>
+		<module>intercloud-exchange</module>
+		<module>intercloud-gateway</module>
+		<module>intercloud-webapp</module>
 	</modules>
 
 	<properties>
