--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<name>Intercloud</name>
 	<url>https://github.com/citlab/Intercloud</url>
+	<description>The Intercloud project aims to provide an Extensible Messaging and Presence Protocol (XMPP) and Open Cloud Computing Interface (OCCI) based network overlay for cloud to cloud interoperability.</description>
 
 	<inceptionYear>2014</inceptionYear>
 
@@ -44,7 +45,7 @@
 			<post>occi-wg@ogf.org</post>
 		</mailingList>
 	</mailingLists>
-	
+
 	<organization>
 		<name>TU Berlin</name>
 		<url>http://www.cit.tu-berlin.de</url>
@@ -66,7 +67,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
+
 	<modules>
 		<module>occi-core</module>
 		<module>occi-text</module>
@@ -97,25 +98,40 @@
 					<!-- to generate javadoc report -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9</version>
+					<version>2.10.3</version>
 				</plugin>
 				<plugin>
 					<!-- to generate xref report -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jxr-plugin</artifactId>
-					<version>2.3</version>
+					<version>2.5</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
 				</plugin>
 				<plugin>
 					<!-- to generate surefire (test) report -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>2.15</version>
+					<version>2.18.1</version>
 				</plugin>
 				<plugin>
 					<!-- to generate PMD and DPD reports (code quality) -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-pmd-plugin</artifactId>
-					<version>3.1</version>
+					<version>3.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>taglist-maven-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-checkstyle-plugin</artifactId>
+					<version>2.15</version>
 				</plugin>
 				<plugin>
 					<!-- to set version of standard plugin -->
@@ -126,6 +142,81 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<reporting>
+		<excludeDefaults>true</excludeDefaults>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<inherited>false</inherited>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<inherited>true</inherited>
+				<reportSets>
+					<reportSet>
+						<id>aggregate</id>
+						<inherited>true</inherited>
+						<reports>
+							<!-- report>index</report -->
+							<report>summary</report>
+							<report>modules</report>
+							<!-- report>cim</report -->
+							<report>issue-tracking</report>
+							<!-- report>distribution-management</report -->
+							<report>mailing-list</report>
+							<report>license</report>
+							<report>project-team</report>
+							<report>scm</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
+				</plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<dependencies>
 		<dependency>
