--- a/xmpp-rest/pom.xml
+++ b/xmpp-rest/pom.xml
@@ -20,7 +20,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>xml-maven-plugin</artifactId>
-				<version>1.0</version>
 				<executions>
 					<execution>
 						<phase>compile</phase>
@@ -122,12 +121,22 @@
 			<artifactId>maven-resources-plugin</artifactId>
 			<version>2.7</version>
 		</dependency>
-
-		<!-- alternative XSLT processor -->
 		<dependency>
-			<groupId>net.sf.saxon</groupId>
-			<artifactId>saxon</artifactId>
-			<version>8.7</version>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>xml-maven-plugin</artifactId>
+			<version>1.0</version>
+			<exclusions>
+            <exclusion>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+            </exclusion>
+        </exclusions>
+		</dependency>
+		<!-- bugfix -->
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.11.0</version>
 		</dependency>
 	</dependencies>
 </project>
