--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 		<module>intercloud-exchange</module>
 		<module>intercloud-gateway</module>
 		<module>intercloud-webapp</module>
+		<module>enterprise-application</module>
 	</modules>
 
 	<properties>
