created http occi test server

--- a/xmpp-client/pom.xml
+++ b/xmpp-client/pom.xml
@@ -17,17 +17,54 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>de.tu_berlin.cit.intercloud.xmpp.component.XmppComponent</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>de.tu_berlin.cit.intercloud.xmpp.client.XmppClient</mainClass>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>de.tu_berlin.cit.intercloud.xmpp.component.XmppComponent</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
-			</plugin>
+			</plugin -->
+			<plugin> 
+                    <artifactId>maven-dependency-plugin</artifactId> 
+                        <executions> 
+                            <execution> 
+                                <phase>install</phase> 
+                                <goals> 
+                                    <goal>copy-dependencies</goal> 
+                                </goals> 
+                                <configuration> 
+                                    <outputDirectory>${project.build.directory}/lib</outputDirectory> 
+                                </configuration> 
+                            </execution> 
+                        </executions> 
+                </plugin> 
 		</plugins>
 	</build>
 
