--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 		<module>occi-core</module>
 		<module>occi-text</module>
 		<module>occi-infrastructure</module>
+		<module>occi-http-server</module>
 		<module>xmpp-core</module>
 		<module>xmpp-rest</module>
 		<module>xmpp-component</module>
