added delete all

--- a/occi-http-server/pom.xml
+++ b/occi-http-server/pom.xml
@@ -27,14 +27,14 @@
 			<version>0.0.1</version>
 		</dependency>
 		<!-- REST dependencies -->
-		<!-- dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>1.19</version>
-		</dependency -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>2.18</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
 			<version>2.18</version>
 		</dependency>
 	</dependencies>
