--- a/occi-http-client/pom.xml
+++ b/occi-http-client/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>occi-text</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>util</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 		<!-- REST dependencies -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
