--- a/xmpp-component/pom.xml
+++ b/xmpp-component/pom.xml
@@ -73,7 +73,17 @@
 		<!-- intercloud dependencies -->
 		<dependency>
 			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>xmpp-core</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
 			<artifactId>xmpp-rest</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>occi-infrastructure</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 		<!-- whack v1.0.0 dependencies -->
