--- a/xmpp-client/pom.xml
+++ b/xmpp-client/pom.xml
@@ -75,7 +75,22 @@
 		</dependency>
 		<dependency>
 			<groupId>org.igniterealtime.smack</groupId>
+			<artifactId>smack-java7</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.igniterealtime.smack</groupId>
 			<artifactId>smack-tcp</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.igniterealtime.smack</groupId>
+			<artifactId>smack-extensions</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.igniterealtime.smack</groupId>
+			<artifactId>smack-sasl-provided</artifactId>
 			<version>4.1.1</version>
 		</dependency>
 	</dependencies>
