--- a/intercloud-gateway/pom.xml
+++ b/intercloud-gateway/pom.xml
@@ -10,15 +10,57 @@
 
 	<groupId>de.tu_berlin.cit.intercloud</groupId>
 	<artifactId>gateway</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>Intercloud Gateway Module</name>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>de.tu_berlin.cit.intercloud.root.GatewayApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
+		<!-- intercloud dependencies -->
 		<dependency>
-			<groupId>org.igniterealtime.smack</groupId>
-			<artifactId>smack-core</artifactId>
-			<version>4.1.1</version>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>xmpp-component</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
