--- a/intercloud-exchange/pom.xml
+++ b/intercloud-exchange/pom.xml
@@ -62,5 +62,10 @@
 			<artifactId>xmpp-component</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>util</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
