--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 	<modules>
 		<module>intercloud-util</module>
 		<module>occi-core</module>
-		<module>occi-infrastructure</module>
+		<module>occi-extension</module>
 		<module>xmpp-core</module>
 		<module>xmpp-rest</module>
 		<module>xmpp-component</module>
