--- a/xmpp-rest/pom.xml
+++ b/xmpp-rest/pom.xml
@@ -191,6 +191,11 @@
 		<!-- intercloud dependencies -->
 		<dependency>
 			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>util</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
 			<artifactId>occi-core</artifactId>
 			<version>0.0.1</version>
 		</dependency>
