--- a/intercloud-webapp/pom.xml
+++ b/intercloud-webapp/pom.xml
@@ -18,7 +18,7 @@
 	<properties>
 		<wicket.version>7.1.0</wicket.version>
 		<wicket.bootstrap.version>0.10.3</wicket.bootstrap.version>
-		<jetty.version>7.6.3.v20120416</jetty.version>
+		<jetty.version>8.1.16.v20140903</jetty.version>
 	</properties>
 
 	<build>
@@ -59,21 +59,21 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jetty.version}</version>
-				<configuration>
+				<!-- configuration>
 					<connectors>
 						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
 							<port>8080</port>
 							<maxIdleTime>3600000</maxIdleTime>
 						</connector>
-						<!-- connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
+						<connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
 							<port>8443</port>
 							<maxIdleTime>3600000</maxIdleTime>
 							<keystore>${project.build.directory}/test-classes/keystore</keystore>
 							<password>wicket</password>
 							<keyPassword>wicket</keyPassword>
-						</connector-->
+						</connector>
 					</connectors>
-					<!-- contextHandlers>
+					<contextHandlers>
 						<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
 							<war>${basedir}/../../registry-eunomia/registry-eunomia-webapp/target/eunomia-${project.version}.war</war>
 							<contextPath>/registry</contextPath>
@@ -86,8 +86,8 @@
 							<war>${basedir}/../../evaluator-dike/evaluator-dike-webapp/target/dike-${project.version}.war</war>
 							<contextPath>/evaluator</contextPath>
 						</contextHandler>
-					</contextHandlers -->
-				</configuration>
+					</contextHandlers>
+				</configuration -->
 				
 			</plugin>
 		</plugins>
