--- a/intercloud-gateway/pom.xml
+++ b/intercloud-gateway/pom.xml
@@ -22,6 +22,15 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<configuration>
+					<mainClass>de.tu_berlin.cit.intercloud.gateway.GatewayApplication</mainClass>
+					<classpathScope>test</classpathScope>
+				</configuration>
+			</plugin>
+			<!-- plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptorRefs>
@@ -57,7 +66,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin -->
 		</plugins>
 	</build>
 
