--- a/intercloud-root/pom.xml
+++ b/intercloud-root/pom.xml
@@ -17,6 +17,15 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<configuration>
+					<mainClass>de.tu_berlin.cit.intercloud.exchange.ExchangeApplication</mainClass>
+					<classpathScope>test</classpathScope>
+				</configuration>
+			</plugin>
+			<!-- plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptorRefs>
@@ -51,7 +60,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin -->
 		</plugins>
 	</build>
 
