--- a/intercloud-exchange/pom.xml
+++ b/intercloud-exchange/pom.xml
@@ -73,6 +73,11 @@
 		</dependency>
 		<dependency>
 			<groupId>de.tu_berlin.cit.intercloud</groupId>
+			<artifactId>xmpp-cep</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tu_berlin.cit.intercloud</groupId>
 			<artifactId>util</artifactId>
 			<version>0.0.1</version>
 		</dependency>
