--- a/xmpp-component/pom.xml
+++ b/xmpp-component/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>xpp3</artifactId>
 			<version>1.1.4c</version>
 		</dependency>
+		<!-- persistence dependencies -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
