--- a/intercloud-root/pom.xml
+++ b/intercloud-root/pom.xml
@@ -68,12 +68,7 @@
 		<!-- intercloud dependencies -->
 		<dependency>
 			<groupId>de.tu_berlin.cit.intercloud</groupId>
-			<artifactId>xmpp-component</artifactId>
-			<version>0.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>de.tu_berlin.cit.intercloud</groupId>
-			<artifactId>util</artifactId>
+			<artifactId>intercloud-component</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
