--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,8 @@
 		<module>xmpp-component</module>
 		<module>xmpp-client</module>
 		<module>xmpp-test-client</module>
+		<module>intercloud-sla</module>
+		<module>intercloud-component</module>
 		<module>intercloud-root</module>
 		<module>intercloud-exchange</module>
 		<module>intercloud-gateway</module>
