removed rwx4j core

--- a/xmpp-occi/pom.xml
+++ b/xmpp-occi/pom.xml
@@ -116,9 +116,9 @@
 	<dependencies>
 		<!-- intercloud dependencies -->
 		<dependency>
-			<groupId>de.tu_berlin.cit.intercloud</groupId>
-			<artifactId>xmpp-rest</artifactId>
-			<version>0.0.1</version>
+			<groupId>de.tu_berlin.cit.rwx4j</groupId>
+			<artifactId>rwx4j-core</artifactId>
+			<version>0.3.0</version>
 		</dependency>
 		<!-- xmlbeans -->
 		<dependency>
