MonitoredRequestCycleListener to log request execution time

--- a/intercloud-webapp/pom.xml
+++ b/intercloud-webapp/pom.xml
@@ -107,6 +107,11 @@
 			<artifactId>wicket-core</artifactId>
 			<version>${wicket.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-devutils</artifactId>
+			<version>${wicket.version}</version>
+		</dependency>
 
 		<!-- WICKET BOOTSTRAP -->
 		<dependency>
